Used to 'stretch' to fix the contact form

--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ footer{
     grid-column: 2;
     display: flex;
     flex-direction: column;
-    align-items:center;
+    align-items:stretch;
     color: white;
     padding: 20px;
     width: 100%;
@@ -351,7 +351,7 @@ footer{
         grid-column: 1;
         display: flex;
         flex-direction: column;
-        align-items:center;
+        align-items:stretch;
         color: white;
         padding: 20px;
         width: 100%;
@@ -360,7 +360,7 @@ footer{
 .formInput{
     display: flex;
     flex-direction: column;
-    max-width: fit-content;
+    /* max-width: fit-content; */
     font-family: "Montserrat", serif;
     background-color:none;
     padding: 30px;
